--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,6 @@
 body {
-  background-color: rgb(250, 250, 250);
+  background-color: #8d7d7d;
+  background-image: url("./images/background.png");
 }
 
 .container {
