--- a/src/components/CountryPicker/CountryPicker.module.css
+++ b/src/components/CountryPicker/CountryPicker.module.css
@@ -1,4 +1,13 @@
 .formControl {
-    width: 30%;
+  margin-top: 10px !important;
+  width: 30%;
+  margin-bottom: 30px !important;
+}
+
+@media (max-width: 770px) {
+  .formControl {
+    margin-top: 10px !important;
+    width: 100%;
     margin-bottom: 30px !important;
+  }
 }
