--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,4 @@
 body {
-  background-color: #8d7d7d;
-  background-image: url("./images/background.png");
+  background-color: #2a3647;
+  /* background-image: url("./images/background.png"); */
 }
